2019-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-select-buffer-show-this-line)
	(w3m-select-buffer-next-line): Keep the column position in the
	selection window when moving up or down ([emacs-w3m:13440]).

	* w3m-util.el (w3m-generate-new-buffer):
	Work regardless of w3m-use-title-buffer-name ([emacs-w3m:13441]).

2019-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	Bugfix ([emacs-w3m:13417])

	* w3m.el (w3m-search-name-anchor): Refactor; make the window positions
	sure to be set for the case where it runs in the background.
	(w3m-copy-buffer): Revert to the old function definition keeping the
	current arglist and its order; work for the background run suitably.

	Trivia:
	* w3m.el (w3m-view-this-url-new-session-in-background): Remove.
	(w3m--retrieve-and-render--handler-function):
	Make the "...has been retrieved" message sure to be shown for a while.
	(w3m-view-this-url-1): Always select the copied buffer.
	(w3m-view-this-url-new-session, w3m-goto-url-new-session):
	Don't show the progress message for the background run.
	(w3m--goto-url--handler-function):
	Show the "...has been retrieved" message when jumping to a name anchor
	in the background.

2019-05-27  Tatsuya Kinoshita  <tats@debian.org>

	* w3m-bookmark.el (w3m-bookmark-file-modtime): Chase links
	([emacs-w3m:13427]).

2019-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el (w3m-session-select-merge): New feature, allows moving
	data between sessions.
	(w3m-session-select-mode-map): Bind new feature to 'm' and 'M'.
	(w3m-session-select-mode): Document the new feature.

	* w3m-session.el (w3m-session-select-select): Don't quit after each
	individual session action.
	(w3m-session-goto-session): Preserve session buffer in its window, use
	w3m version of message function, remove needless nreverse, do not
	create duplicate buffers.

2019-05-09  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-bookmark.el (w3m-bookmark-add): Bugfix: Order of args to function
	string-match. Message text tweak.